# rl-detector

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  render.yaml  web_ui_run.sh
src/rl_detector/: annotate.py  config.py  data.py  fewshots.py  frozen.py  prompts.py  rewards.py  rollouts.py  train.py
src/rl_detector/webui/: __init__.py  app.py
src/rl_detector/webui/static/: app.js  index.html  styles.css
